--- a/org.camdroid_apk/AndroidManifest.xml
+++ b/org.camdroid_apk/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.camdriod"
+    package="org.camdroid"
     android:installLocation="preferExternal"
     android:versionCode="1"
     android:versionName="1.0" >
