--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':openCVLibrary300')
+    compile project(':tesseractLibrary30202')
 }
