--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion '23.0.1'
+    buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "org.hschott.camdroid"
         minSdkVersion 19
         targetSdkVersion 19
-        versionCode 3
-        versionName "2.0"
+        versionCode 4
+        versionName "2.1"
     }
     buildTypes {
         release {
@@ -24,7 +24,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':openCVLibrary300')
     compile project(':tesseractLibrary30202')
 }
