--- a/openCVLibrary300/build.gradle
+++ b/openCVLibrary300/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 android {
     compileSdkVersion 19
-    buildToolsVersion '23.0.1'
+    buildToolsVersion "27.0.3"
     defaultConfig {
         minSdkVersion 8
         targetSdkVersion 8
